--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             </div>
         </div>
     </div>
-    <h1 id="instruction-text">Press spacebar to start the game</h1>
+    <h1 id="instruction-text">Press spacebar or touch to start the game</h1>
     <img id="logo" src="img/snake.webp" alt="snake-logo"> 
 </body>
 </html>
